# hidemylogs

./: .gitattributes  .gitignore  Cargo.toml  Makefile  README.md  TODO.md
.github/workflows/: ci.yml  release.yml
docs/: index.html
samples/: compromised.btmp  compromised.lastlog  compromised.utmp  compromised.wtmp
scripts/: generate_samples.py  polymorphic.py
src/: display.rs  lastlog.rs  main.rs  utmp.rs
